--- a/package.json
+++ b/package.json
@@ -25,25 +25,19 @@
     "@meronex/icons": "^4.0.0",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.8.0",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-slot": "^1.2.3",
     "@stripe/stripe-js": "^1.38.1",
     "aws-amplify": "^6.15.7",
     "bcryptjs": "^3.0.2",
     "canvas": "^3.2.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "2.1.1",
     "date-fns": "^2.29.3",
     "express-validator": "^6.14.2",
     "formidable": "^3.5.4",
-    "framer-motion": "^12.23.22",
+    "framer-motion": "^12.23.12",
     "i18next": "^23.5.1",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "0.542.0",
+    "lucide-react": "^0.542.0",
     "micro": "^9.4.1",
     "midtrans-client": "^1.4.3",
-    "motion": "^12.23.22",
     "next": "^13.5.1",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
@@ -63,13 +57,11 @@
     "stripe": "^10.13.0",
     "svgo": "^4.0.0",
     "swr": "^1.3.0",
-    "tailwind-merge": "3.3.1",
     "validator": "^13.7.0"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.16.1",
     "@aws-amplify/backend-cli": "^1.8.0",
-    "@types/react": "^19.2.2",
     "autoprefixer": "^10.4.1",
     "eslint": "^8.14.0",
     "eslint-config-next": "^13.1.0",
